# petsc_cuda_anselm

./: README.md  Vaclav_config_options.txt  arch-gnu-xc30-anselm-cuda.py  arch-gnu-xc30-cuda-dbg.py  icc16-impi5-mkl-cuda-dbg.py  module_load  module_load_Vaclav  module_load_anselm
example/: CMakeLists.txt  benchmark_seq.cpp  benchmark_seq.cu  test_cuda.cpp  test_cuda.cu  test_cuda_cusp.cpp
example/include/: this_is_kernel.h  this_will_be_kernel.h
example/pbs_scripts/: petsc_sample_gpu.pbs
example/util/: module_load_daint  set_petsc_dir_arch
